Linear regression algorithm

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,30 +176,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "m = samples.shape[0]\n",
-    "y = np.dot(w,samples)+b\n"
+    "y = np.dot(samples,w2 )+b2\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.91035178 0.56665743 0.39244372 1.        ]\n",
-      " [0.84244167 0.41491755 0.19364384 1.        ]\n",
-      " [0.29199083 0.56372885 0.12164666 1.        ]\n",
+      "[[0.4588712  0.75190351 0.38021571 1.        ]\n",
+      " [0.56104305 0.8343455  0.01671215 1.        ]\n",
+      " [0.68204149 0.73942196 0.45850249 1.        ]\n",
       " ...\n",
-      " [0.99417917 0.87055829 0.32361735 1.        ]\n",
-      " [0.30142102 0.00339128 0.28066414 1.        ]\n",
-      " [0.65436036 0.0095303  0.94282933 1.        ]]\n"
+      " [0.2248673  0.21414019 0.67100557 1.        ]\n",
+      " [0.74606456 0.85828098 0.46214853 1.        ]\n",
+      " [0.03278281 0.16790568 0.04055404 1.        ]]\n"
      ]
     }
    ],
@@ -210,17 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.00000000e+02  2.80426782e-13  1.04124926e-14]\n",
-      " [-7.24098775e-14  2.00000000e+02 -8.19567552e-14]\n",
-      " [-4.15901347e-13 -3.12788660e-13  2.00000000e+02]\n",
-      " [ 1.00000000e+02  1.00000000e+02  1.00000000e+02]]\n"
+      "[ 5.00000000e+00  2.58126853e-15  9.00000000e+00 -4.00000000e+00]\n"
      ]
     }
    ],
